fix spacings

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,10 @@
     position: relative;
     height: 50px;
 }
+.invinsible1 {
+    position: relative;
+    height: 0px;
+}
 .container{
     padding: 10px;
     position: relative;
